library/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: library
  labels:
    app: calibre-server
spec:
  selector:
    matchLabels:
      app: calibre-server
  replicas: 1
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: calibre-server
    spec:
      dnsPolicy: Default
      containers:
      - name: calibre-server
        image: linuxserver/calibre-web:0.6.19
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8083
        volumeMounts:
          - mountPath: /books
            name: books
            readOnly: false
          - mountPath: /config
            name: calibre-config
            readOnly: false
      volumes:
        - name: calibre-config
          persistentVolumeClaim:
            claimName: calibre-config
            readOnly: false
        - name: books
          persistentVolumeClaim:
            claimName: books
            readOnly: false
---
