library/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-service
  namespace: library
  labels:
    app: calibre-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8083
  selector:
    app: calibre-server
